# oxigraph

./: .gitmodules  Cargo.toml
.github/workflows/: tests.yml
lib/: Cargo.toml
lib/oxttl/: Cargo.toml
lib/oxttl/src/: lexer.rs  lib.rs  line_formats.rs  n3.rs  nquads.rs  ntriples.rs  terse.rs  trig.rs  turtle.rs
lib/oxttl/src/toolkit/: lexer.rs  parser.rs
lib/spargebra/src/: term.rs
lib/src/io/: error.rs  read.rs
testsuite/: Cargo.toml
testsuite/benches/: parser.rs
testsuite/oxigraph-tests/parser/: manifest.ttl
testsuite/src/: files.rs  main.rs  manifest.rs  parser_evaluator.rs  report.rs  sparql_evaluator.rs
testsuite/tests/: oxigraph.rs  parser.rs  serd.rs  sparql.rs
