[package]
name = "oxttl"
version = "0.1.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/master/lib/oxttl"
homepage = "https://oxigraph.org/"
description = """
N-Triples parser
"""
edition = "2021"
rust-version = "1.60"

[features]
default = []
rdf-star = ["oxrdf/rdf-star"]

[dependencies]
memchr = "2"
oxrdf = { version = "0.1.0", path = "../oxrdf" }
oxiri = "0.2"
oxilangtag = "0.1"

[package.metadata.docs.rs]
all-features = true
